gts-macros/tests/compile_fail/base_struct_wrong_id_type.rs
//! Test: Base struct with wrong ID field type should fail compilation

use gts_macros::struct_to_gts_schema;
use serde::{Deserialize, Serialize};
use schemars::JsonSchema;

#[struct_to_gts_schema(
    dir_path = "schemas",
    base = true,
    schema_id = "gts.x.core.events.topic.v1~",
    description = "Base topic type definition with wrong ID type",
    properties = "id,name,description"
)]
#[derive(Debug, Serialize, Deserialize, JsonSchema)]
pub struct TopicV1WrongIdType<P> {
    pub id: String, // This should be GtsInstanceId, not String
    pub name: String,
    pub description: Option<String>,
    pub config: P,
}

fn main() {}
